--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>RELEASE</version>
+            <version>[9.3.24.v20180605,)</version>
         </dependency>
     </dependencies>
 
